--- a/lp_table_template.htm
+++ b/lp_table_template.htm
@@ -148,137 +148,149 @@
             <!-- 內頁新增一個classname-->
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
-                <div class="breadcrumb">
-                    <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">節點</a></li>
-                        <li>節點</li>
-                    </ul>
+                <!-- 左側 -->
+                <div class="left_block">
+                    <div class="leftblock_banner">
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                    </div>
                 </div>
-                <!-- h2節點 -->
-                <h2 class="title">節點標題</h2>
-                <!-- function功能區塊 -->
-                <div class="function">
-                    <ul>
-                        <li><a href="#">回上一頁</a></li>
-                        <li><a href="#">友善列印</a></li>
-                        <li><a href="#">轉寄友人</a></li>
-                    </ul>
-                </div>
-                <section class="lp">
-                    <!-- category -->
-                    <div class="category">
+                <!-- 主要內容區 -->
+                <div class="center_block">
+                    <div class="breadcrumb">
                         <ul>
-                            <li><a href="#">標籤1</a></li>
-                            <li><a href="#">標籤2</a></li>
-                            <li><a href="#">標籤3</a></li>
-                            <li><a href="#">標籤4</a></li>
-                            <li><a href="#">標籤5</a></li>
-                            <li><a href="#">標籤6</a></li>
-                            <li><a href="#">標籤7</a></li>
-                            <li><a href="#">標籤8</a></li>
-                            <li><a href="#">標籤9</a></li>
-                            <li><a href="#">標籤10</a></li>
+                            <li><a href="#">首頁</a></li>
+                            <li><a href="#">節點</a></li>
+                            <li>節點</li>
                         </ul>
                     </div>
-                    <div class="table_list">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>編號</th>
-                                    <th>標題</th>
-                                    <th>日期</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td data-title="編號" class="num">01</td>
-                                    <td data-title="標題"><a href="#">通勤搭車看預報 環保集點10倍送</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">02</td>
-                                    <td data-title="標題"><a href="#">春節不無聊上網學習環境教育</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">03</td>
-                                    <td data-title="標題"><a href="#">洗錢防制，國家向前</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">04</td>
-                                    <td data-title="標題"><a href="#">春節送禮認標章 環保減碳又健康</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">05</td>
-                                    <td data-title="標題"><a href="#">環保替代役歲末新春送溫暖</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">06</td>
-                                    <td data-title="標題"><a href="#">向非法化學物質說不 安全蛋品 吃得健康</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">07</td>
-                                    <td data-title="標題"><a href="#">春節期間廚餘回收真惜福 狗年來富又來福</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">08</td>
-                                    <td data-title="標題"><a href="#">春節長假看Chem Life，增長知識又可抽獎</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">09</td>
-                                    <td data-title="標題"><a href="#">金狗年春節旅遊好去處，環保署報你知</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                                <tr>
-                                    <td data-title="編號" class="num">10</td>
-                                    <td data-title="標題"><a href="#">清新空氣保健康 神明歡喜過好年</a></td>
-                                    <td data-title="日期" class="date">2018/01/01</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <!-- h2節點 -->
+                    <h2 class="title">節點標題</h2>
+                    <!-- function功能區塊 -->
+                    <div class="function">
+                        <ul>
+                            <li><a href="#">回上一頁</a></li>
+                            <li><a href="#">友善列印</a></li>
+                            <li><a href="#">轉寄友人</a></li>
+                        </ul>
                     </div>
-                </section>
-                <!-- LP End -->
-                <!-- Pagination -->
-                <div class="pagination">
-                    <form action="" class="form_inline">
-                        <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
-                                <option value="">10</option>
-                                <option value="">20</option>
-                                <option value="">30</option>
-                                <option value="">40</option>
-                            </select> 筆， <input type="button" class="btn" value="確定">
+                    <section class="lp">
+                        <!-- category -->
+                        <div class="category">
+                            <ul>
+                                <li><a href="#">標籤1</a></li>
+                                <li><a href="#">標籤2</a></li>
+                                <li><a href="#">標籤3</a></li>
+                                <li><a href="#">標籤4</a></li>
+                                <li><a href="#">標籤5</a></li>
+                                <li><a href="#">標籤6</a></li>
+                                <li><a href="#">標籤7</a></li>
+                                <li><a href="#">標籤8</a></li>
+                                <li><a href="#">標籤9</a></li>
+                                <li><a href="#">標籤10</a></li>
+                            </ul>
                         </div>
-                    </form>
-                    <ul class="page">
-                        <li class="first">
-                            <a href="#" title="第一頁">第一頁 </a></li>
-                        <li class="prev">
-                            <a href="#" title="回上一頁">回上一頁 </a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">6</a></li>
-                        <li><a href="#">7</a></li>
-                        <li><a href="#">8</a></li>
-                        <li><a href="#">9</a></li>
-                        <li><a href="#">10</a></li>
-                        <li class="next">
-                            <a href="#" title="下一頁">下一頁 </a>
-                        </li>
-                        <li class="last">
-                            <a href="#" title="最後一頁">最後一頁 </a>
-                        </li>
-                    </ul>
+                        <div class="table_list">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>編號</th>
+                                        <th>標題</th>
+                                        <th>日期</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td data-title="編號" class="num">01</td>
+                                        <td data-title="標題"><a href="#">通勤搭車看預報 環保集點10倍送</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">02</td>
+                                        <td data-title="標題"><a href="#">春節不無聊上網學習環境教育</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">03</td>
+                                        <td data-title="標題"><a href="#">洗錢防制，國家向前</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">04</td>
+                                        <td data-title="標題"><a href="#">春節送禮認標章 環保減碳又健康</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">05</td>
+                                        <td data-title="標題"><a href="#">環保替代役歲末新春送溫暖</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">06</td>
+                                        <td data-title="標題"><a href="#">向非法化學物質說不 安全蛋品 吃得健康</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">07</td>
+                                        <td data-title="標題"><a href="#">春節期間廚餘回收真惜福 狗年來富又來福</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">08</td>
+                                        <td data-title="標題"><a href="#">春節長假看Chem Life，增長知識又可抽獎</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">09</td>
+                                        <td data-title="標題"><a href="#">金狗年春節旅遊好去處，環保署報你知</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                    <tr>
+                                        <td data-title="編號" class="num">10</td>
+                                        <td data-title="標題"><a href="#">清新空氣保健康 神明歡喜過好年</a></td>
+                                        <td data-title="日期" class="date">2018/01/01</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </section>
+                    <!-- LP End -->
+                    <!-- Pagination -->
+                    <div class="pagination">
+                        <form action="" class="form_inline">
+                            <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
+                                    <option value="">10</option>
+                                    <option value="">20</option>
+                                    <option value="">30</option>
+                                    <option value="">40</option>
+                                </select> 筆， <input type="button" class="btn" value="確定">
+                            </div>
+                        </form>
+                        <ul class="page">
+                            <li class="first">
+                                <a href="#" title="第一頁">第一頁 </a></li>
+                            <li class="prev">
+                                <a href="#" title="回上一頁">回上一頁 </a></li>
+                            <li class="active"><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                            <li><a href="#">7</a></li>
+                            <li><a href="#">8</a></li>
+                            <li><a href="#">9</a></li>
+                            <li><a href="#">10</a></li>
+                            <li class="next">
+                                <a href="#" title="下一頁">下一頁 </a>
+                            </li>
+                            <li class="last">
+                                <a href="#" title="最後一頁">最後一頁 </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
