--- a/lp_template.htm
+++ b/lp_template.htm
@@ -148,141 +148,153 @@
             <!-- 內頁新增一個classname-->
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
-                <!-- breadcrumb路徑 -->
-                <div class="breadcrumb">
-                    <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">節點</a></li>
-                        <li>節點</li>
-                    </ul>
+                <!-- 左側 -->
+                <div class="left_block">
+                    <div class="leftblock_banner">
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                    </div>
                 </div>
-                <!-- h2節點 -->
-                <h2 class="title">節點標題</h2>
-                <!-- function功能區塊 -->
-                <div class="function">
-                    <ul>
-                        <li class="icon_back"><a href="#">回上一頁</a></li>
-                        <li class="icon_print"><a href="#">友善列印</a></li>
-                        <li class="icon_forward"><a href="#">轉寄友人</a></li>
-                    </ul>
-                </div>
-                <!-- LP Start -->
-                <section class="lp">
-                    <!-- category -->
-                    <div class="category">
+                <!-- 主要內容區 -->
+                <div class="center_block">
+                    <!-- breadcrumb路徑 -->
+                    <div class="breadcrumb">
                         <ul>
-                            <li><a href="#">標籤1</a></li>
-                            <li><a href="#">標籤2</a></li>
-                            <li><a href="#">標籤3</a></li>
-                            <li><a href="#">標籤4</a></li>
-                            <li><a href="#">標籤5</a></li>
-                            <li><a href="#">標籤6</a></li>
-                            <li><a href="#">標籤7</a></li>
-                            <li><a href="#">標籤8</a></li>
-                            <li><a href="#">標籤9</a></li>
-                            <li><a href="#">標籤10</a></li>
+                            <li><a href="#">首頁</a></li>
+                            <li><a href="#">節點</a></li>
+                            <li>節點</li>
                         </ul>
                     </div>
-                    <!-- 文字列表 -->
-                    <div class="list">
+                    <!-- h2節點 -->
+                    <h2 class="title">節點標題</h2>
+                    <!-- function功能區塊 -->
+                    <div class="function">
                         <ul>
-                            <li>
-                                <a href="#">
-                                    <span class="num">1</span> 颱風逼近軍民齊心加強防颱戒備 <span class="dept">(服務照顧處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">2</span> 東坑微電網示範將到期縣府盼由台電承接 <span class="dept"> (就養養護處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">3</span> 公務員高普考10日登場縣府謹慎試務 <span class="dept"> (就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">4</span> 縣長﹕導引正向能量提升教育競爭力 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">5</span> 颱風逼近軍民齊心加強防颱戒備 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">6</span>立法院三讀通過「國軍退除役官兵輔導條例」第3條之1、第33條、第34條修正案 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">7</span> 國軍退除役官兵年終慰問金發放說明 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">8</span> 因應募兵制推動輔導會就業處積極為榮民（眷）與退役官士兵就學、職訓、就業輔導服務升級 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">9</span> 輔導會各榮院全力投入「二O六大地震」救災 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="num">10</span> 退除役官兵申請就學獎助學金自二月一日起開始受理 <span class="dept">(就學就業處)</span>
-                                    <time>2018-03-09</time>
-                                </a>
-                            </li>
+                            <li class="icon_back"><a href="#">回上一頁</a></li>
+                            <li class="icon_print"><a href="#">友善列印</a></li>
+                            <li class="icon_forward"><a href="#">轉寄友人</a></li>
                         </ul>
                     </div>
-                </section>
-                <!-- LP End -->
-                <!-- Pagination -->
-                <div class="pagination">
-                    <form action="" class="form_inline">
-                        <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
-                                <option value="">10</option>
-                                <option value="">20</option>
-                                <option value="">30</option>
-                                <option value="">40</option>
-                            </select> 筆， <input type="button" class="btn" value="確定">
+                    <!-- LP Start -->
+                    <section class="lp">
+                        <!-- category -->
+                        <div class="category">
+                            <ul>
+                                <li><a href="#">標籤1</a></li>
+                                <li><a href="#">標籤2</a></li>
+                                <li><a href="#">標籤3</a></li>
+                                <li><a href="#">標籤4</a></li>
+                                <li><a href="#">標籤5</a></li>
+                                <li><a href="#">標籤6</a></li>
+                                <li><a href="#">標籤7</a></li>
+                                <li><a href="#">標籤8</a></li>
+                                <li><a href="#">標籤9</a></li>
+                                <li><a href="#">標籤10</a></li>
+                            </ul>
                         </div>
-                    </form>
-                    <ul class="page">
-                        <li class="first">
-                            <a href="#" title="第一頁">第一頁 </a></li>
-                        <li class="prev">
-                            <a href="#" title="回上一頁">回上一頁 </a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">6</a></li>
-                        <li><a href="#">7</a></li>
-                        <li><a href="#">8</a></li>
-                        <li><a href="#">9</a></li>
-                        <li><a href="#">10</a></li>
-                        <li class="next">
-                            <a href="#" title="下一頁">下一頁 </a>
-                        </li>
-                        <li class="last">
-                            <a href="#" title="最後一頁">最後一頁 </a>
-                        </li>
-                    </ul>
+                        <!-- 文字列表 -->
+                        <div class="list">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">1</span> 颱風逼近軍民齊心加強防颱戒備 <span class="dept">(服務照顧處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">2</span> 東坑微電網示範將到期縣府盼由台電承接 <span class="dept"> (就養養護處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">3</span> 公務員高普考10日登場縣府謹慎試務 <span class="dept"> (就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">4</span> 縣長﹕導引正向能量提升教育競爭力 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">5</span> 颱風逼近軍民齊心加強防颱戒備 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">6</span>立法院三讀通過「國軍退除役官兵輔導條例」第3條之1、第33條、第34條修正案 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">7</span> 國軍退除役官兵年終慰問金發放說明 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">8</span> 因應募兵制推動輔導會就業處積極為榮民（眷）與退役官士兵就學、職訓、就業輔導服務升級 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">9</span> 輔導會各榮院全力投入「二O六大地震」救災 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span class="num">10</span> 退除役官兵申請就學獎助學金自二月一日起開始受理 <span class="dept">(就學就業處)</span>
+                                        <time>2018-03-09</time>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <!-- LP End -->
+                    <!-- Pagination -->
+                    <div class="pagination">
+                        <form action="" class="form_inline">
+                            <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
+                                    <option value="">10</option>
+                                    <option value="">20</option>
+                                    <option value="">30</option>
+                                    <option value="">40</option>
+                                </select> 筆， <input type="button" class="btn" value="確定">
+                            </div>
+                        </form>
+                        <ul class="page">
+                            <li class="first">
+                                <a href="#" title="第一頁">第一頁 </a></li>
+                            <li class="prev">
+                                <a href="#" title="回上一頁">回上一頁 </a></li>
+                            <li class="active"><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                            <li><a href="#">7</a></li>
+                            <li><a href="#">8</a></li>
+                            <li><a href="#">9</a></li>
+                            <li><a href="#">10</a></li>
+                            <li class="next">
+                                <a href="#" title="下一頁">下一頁 </a>
+                            </li>
+                            <li class="last">
+                                <a href="#" title="最後一頁">最後一頁 </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
