--- a/np_template.htm
+++ b/np_template.htm
@@ -148,40 +148,52 @@
             <!-- 內頁新增一個classname-->
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
-                <!-- breadcrumb路徑 -->
-                <div class="breadcrumb">
-                    <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">節點</a></li>
-                        <li>節點</li>
-                    </ul>
+                <!-- 左側 -->
+                <div class="left_block">
+                    <div class="leftblock_banner">
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                    </div>
                 </div>
-                <!-- h2節點 -->
-                <h2 class="title">節點標題</h2>
-                <!-- function功能區塊 -->
-                <div class="function">
-                    <ul>
-                        <li class="icon_back"><a href="#">回上一頁</a></li>
-                        <li class="icon_print"><a href="#">友善列印</a></li>
-                        <li class="icon_forward"><a href="#">轉寄友人</a></li>
-                    </ul>
+                <!-- 主要內容區 -->
+                <div class="center_block">
+                    <!-- breadcrumb路徑 -->
+                    <div class="breadcrumb">
+                        <ul>
+                            <li><a href="#">首頁</a></li>
+                            <li><a href="#">節點</a></li>
+                            <li>節點</li>
+                        </ul>
+                    </div>
+                    <!-- h2節點 -->
+                    <h2 class="title">節點標題</h2>
+                    <!-- function功能區塊 -->
+                    <div class="function">
+                        <ul>
+                            <li class="icon_back"><a href="#">回上一頁</a></li>
+                            <li class="icon_print"><a href="#">友善列印</a></li>
+                            <li class="icon_forward"><a href="#">轉寄友人</a></li>
+                        </ul>
+                    </div>
+                    <!-- NP Start -->
+                    <section class="np">
+                        <ul>
+                            <li><a href="#"><span class="num">1</span>節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1</a></li>
+                            <li><a href="#"><span class="num">2</span>節點2</a></li>
+                            <li><a href="#"><span class="num">3</span>節點3</a></li>
+                            <li><a href="#"><span class="num">4</span>節點4</a></li>
+                            <li><a href="#"><span class="num">5</span>節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5</a></li>
+                            <li><a href="#"><span class="num">6</span>節點6</a></li>
+                            <li><a href="#"><span class="num">7</span>節點7</a></li>
+                            <li><a href="#"><span class="num">8</span>節點8</a></li>
+                            <li><a href="#"><span class="num">9</span>節點9</a></li>
+                            <li><a href="#"><span class="num">10</span>節點10</a></li>
+                        </ul>
+                    </section>
+                    <!-- NP End -->
                 </div>
-                <!-- NP Start -->
-                <section class="np">
-                    <ul>
-                        <li><a href="#"><span class="num">1</span>節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1</a></li>
-                        <li><a href="#"><span class="num">2</span>節點2</a></li>
-                        <li><a href="#"><span class="num">3</span>節點3</a></li>
-                        <li><a href="#"><span class="num">4</span>節點4</a></li>
-                        <li><a href="#"><span class="num">5</span>節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5節點5</a></li>
-                        <li><a href="#"><span class="num">6</span>節點6</a></li>
-                        <li><a href="#"><span class="num">7</span>節點7</a></li>
-                        <li><a href="#"><span class="num">8</span>節點8</a></li>
-                        <li><a href="#"><span class="num">9</span>節點9</a></li>
-                        <li><a href="#"><span class="num">10</span>節點10</a></li>
-                    </ul>
-                </section>
-                <!-- NP End -->
             </div>
         </div>
         <!-- fatfooter Start -->
