--- a/sitemap_template.htm
+++ b/sitemap_template.htm
@@ -148,95 +148,98 @@
             <!-- 內頁新增一個classname-->
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
-                <!-- breadcrumb路徑 -->
-                <div class="breadcrumb">
-                    <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">節點</a></li>
-                        <li>節點</li>
-                    </ul>
-                </div>
-                <!-- h2節點 -->
-                <h2 class="title">網站導覽</h2>
-                <!-- SITEMAP Start -->
-                <section class="sitemap">
-                    <p>如果您使用的瀏覽器是IE，快速鍵的使用方式是<kbd>Alt</kbd> 加上所定義的字母；如果您用Firefox 瀏覽網頁，快速鍵的使用方式是 <kbd>Alt</kbd> 加 <kbd>Shift </kbd>加上所定義的字母 ：，本網站的快速鍵﹝Accesskey﹞設定如下：</p>
-                    <ul class="accesskeyDefine">
-                        <li><kbd>Alt</kbd>+<kbd>U</kbd>上方功能區塊，包括回首頁、網站導覽、網站搜尋、字體選擇、版本選擇等。</li>
-                        <li><kbd>Alt</kbd>+<kbd>C</kbd>中央內容區塊，為本頁主要內容區。</li>
-                        <li><kbd>Alt</kbd>+<kbd>Z</kbd>下方功能區塊。</li>
-                        <li><kbd>Alt</kbd>+<kbd>S</kbd>網站搜尋。</li>
-                        <li>如果您的瀏覽器是Firefox，快速鍵的使用方法是 <kbd>Shift</kbd>+<kbd>Alt</kbd>+<kbd>(快速鍵字母)</kbd>，例如 <kbd>Shift</kbd>+<kbd>Alt</kbd>+<kbd>C</kbd>會跳至網頁中央區塊，以此類推。</li>
-                    </ul>
-                    <p>※當本網站項目頁籤無法以滑鼠點選時，您可利用以下鍵盤操作方式瀏覽資料 <br /> <kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>：按左右鍵或上下鍵移動標籤順序。 <br /> <kbd>Home</kbd> or <kbd>End</kbd><kbd>→</kbd>：可直接跳至標籤第一項或者最後一項。 <br /> <kbd>Tab</kbd>：停留於該標籤後,可利用<kbd>Tab</kbd>鍵跳至內容瀏覽該筆資料，遇到radio按鈕時請配合使用<kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>鍵移動項目順序。 <br /> <kbd><kbd>Tab + Shift</kbd></kbd>：按Tab + Shift可往回跳至上一筆資料；當跳回至標籤項目時您可繼續利用<kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>鍵移動標籤順序。 </p>
-                    <div class="cascading">
+                <!-- 主要內容區 -->
+                <div class="center_block">
+                    <!-- breadcrumb路徑 -->
+                    <div class="breadcrumb">
                         <ul>
-                            <li><a href="#">認識我們</a>
-                                <ul>
-                                    <li><a href="#">認識秘書處</a></li>
-                                    <li><a href="#">首長介紹</a></li>
-                                    <li><a href="#">組織架構</a></li>
-                                    <li><a href="#">業務職掌</a></li>
-                                    <li><a href="#">服務電話</a></li>
-                                    <li><a href="#">成果展示</a></li>
-                                    <li><a href="#">特色綠建築</a></li>
-                                    <li><a href="#">合署辦公大樓介紹</a></li>
-                                    <li><a href="#">意見信箱</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">最新訊息</a>
-                                <ul>
-                                    <li><a href="#">市政新聞</a></li>
-                                    <li><a href="#">國際交流消息</a></li>
-                                    <li><a href="#">消費者保護訊息</a></li>
-                                    <li><a href="#">徵才訊息</a></li>
-                                    <li><a href="#">工友事求人</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">申辦服務</a>
-                                <ul>
-                                    <li><a href="#">會議室及活動場地申請查詢</a></li>
-                                    <li><a href="#">檔案應用服務申請</a></li>
-                                    <li><a href="#">喜慶中堂申請</a></li>
-                                    <li><a href="#">市府公報電子報訂閱</a></li>
-                                    <li><a href="#">申辦表單下載</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">主題專區</a>
-                                <ul>
-                                    <li><a href="#">國際交流</a></li>
-                                    <li><a href="#">消費者保護資訊</a></li>
-                                    <li><a href="#">績優員工故事專題</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">資訊公開</a>
-                                <ul>
-                                    <li><a href="#">重大政策</a></li>
-                                    <li><a href="#">市府公報</a></li>
-                                    <li><a href="#">法規專區</a></li>
-                                    <li><a href="#">遊說法資訊專區</a></li>
-                                    <li><a href="#">統計資料專區</a></li>
-                                    <li><a href="#">性別齊步走</a></li>
-                                    <li><a href="#">政風園地</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">認識我們</a>
-                                <ul>
-                                    <li><a href="#">認識秘書處</a></li>
-                                    <li><a href="#">首長介紹</a></li>
-                                    <li><a href="#">組織架構</a></li>
-                                    <li><a href="#">業務職掌</a></li>
-                                    <li><a href="#">服務電話</a></li>
-                                    <li><a href="#">成果展示</a></li>
-                                    <li><a href="#">特色綠建築</a></li>
-                                    <li><a href="#">合署辦公大樓介紹</a></li>
-                                    <li><a href="#">意見信箱</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="#">首頁</a></li>
+                            <li><a href="#">節點</a></li>
+                            <li>節點</li>
                         </ul>
                     </div>
-                </section>
-                <!-- SITEMAP End -->
+                    <!-- h2節點 -->
+                    <h2 class="title">網站導覽</h2>
+                    <!-- SITEMAP Start -->
+                    <section class="sitemap">
+                        <p>如果您使用的瀏覽器是IE，快速鍵的使用方式是<kbd>Alt</kbd> 加上所定義的字母；如果您用Firefox 瀏覽網頁，快速鍵的使用方式是 <kbd>Alt</kbd> 加 <kbd>Shift </kbd>加上所定義的字母 ：，本網站的快速鍵﹝Accesskey﹞設定如下：</p>
+                        <ul class="accesskeyDefine">
+                            <li><kbd>Alt</kbd>+<kbd>U</kbd>上方功能區塊，包括回首頁、網站導覽、網站搜尋、字體選擇、版本選擇等。</li>
+                            <li><kbd>Alt</kbd>+<kbd>C</kbd>中央內容區塊，為本頁主要內容區。</li>
+                            <li><kbd>Alt</kbd>+<kbd>Z</kbd>下方功能區塊。</li>
+                            <li><kbd>Alt</kbd>+<kbd>S</kbd>網站搜尋。</li>
+                            <li>如果您的瀏覽器是Firefox，快速鍵的使用方法是 <kbd>Shift</kbd>+<kbd>Alt</kbd>+<kbd>(快速鍵字母)</kbd>，例如 <kbd>Shift</kbd>+<kbd>Alt</kbd>+<kbd>C</kbd>會跳至網頁中央區塊，以此類推。</li>
+                        </ul>
+                        <p>※當本網站項目頁籤無法以滑鼠點選時，您可利用以下鍵盤操作方式瀏覽資料 <br /> <kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>：按左右鍵或上下鍵移動標籤順序。 <br /> <kbd>Home</kbd> or <kbd>End</kbd><kbd>→</kbd>：可直接跳至標籤第一項或者最後一項。 <br /> <kbd>Tab</kbd>：停留於該標籤後,可利用<kbd>Tab</kbd>鍵跳至內容瀏覽該筆資料，遇到radio按鈕時請配合使用<kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>鍵移動項目順序。 <br /> <kbd><kbd>Tab + Shift</kbd></kbd>：按Tab + Shift可往回跳至上一筆資料；當跳回至標籤項目時您可繼續利用<kbd>←</kbd> <kbd>→</kbd> or <kbd>↑</kbd><kbd>↓</kbd>鍵移動標籤順序。 </p>
+                        <div class="cascading">
+                            <ul>
+                                <li><a href="#">認識我們</a>
+                                    <ul>
+                                        <li><a href="#">認識秘書處</a></li>
+                                        <li><a href="#">首長介紹</a></li>
+                                        <li><a href="#">組織架構</a></li>
+                                        <li><a href="#">業務職掌</a></li>
+                                        <li><a href="#">服務電話</a></li>
+                                        <li><a href="#">成果展示</a></li>
+                                        <li><a href="#">特色綠建築</a></li>
+                                        <li><a href="#">合署辦公大樓介紹</a></li>
+                                        <li><a href="#">意見信箱</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">最新訊息</a>
+                                    <ul>
+                                        <li><a href="#">市政新聞</a></li>
+                                        <li><a href="#">國際交流消息</a></li>
+                                        <li><a href="#">消費者保護訊息</a></li>
+                                        <li><a href="#">徵才訊息</a></li>
+                                        <li><a href="#">工友事求人</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">申辦服務</a>
+                                    <ul>
+                                        <li><a href="#">會議室及活動場地申請查詢</a></li>
+                                        <li><a href="#">檔案應用服務申請</a></li>
+                                        <li><a href="#">喜慶中堂申請</a></li>
+                                        <li><a href="#">市府公報電子報訂閱</a></li>
+                                        <li><a href="#">申辦表單下載</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">主題專區</a>
+                                    <ul>
+                                        <li><a href="#">國際交流</a></li>
+                                        <li><a href="#">消費者保護資訊</a></li>
+                                        <li><a href="#">績優員工故事專題</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">資訊公開</a>
+                                    <ul>
+                                        <li><a href="#">重大政策</a></li>
+                                        <li><a href="#">市府公報</a></li>
+                                        <li><a href="#">法規專區</a></li>
+                                        <li><a href="#">遊說法資訊專區</a></li>
+                                        <li><a href="#">統計資料專區</a></li>
+                                        <li><a href="#">性別齊步走</a></li>
+                                        <li><a href="#">政風園地</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">認識我們</a>
+                                    <ul>
+                                        <li><a href="#">認識秘書處</a></li>
+                                        <li><a href="#">首長介紹</a></li>
+                                        <li><a href="#">組織架構</a></li>
+                                        <li><a href="#">業務職掌</a></li>
+                                        <li><a href="#">服務電話</a></li>
+                                        <li><a href="#">成果展示</a></li>
+                                        <li><a href="#">特色綠建築</a></li>
+                                        <li><a href="#">合署辦公大樓介紹</a></li>
+                                        <li><a href="#">意見信箱</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <!-- SITEMAP End -->
+                </div>
             </div>
         </div>
         <!-- fatfooter Start -->
