--- a/qp_template.htm
+++ b/qp_template.htm
@@ -148,102 +148,114 @@
             <!-- 內頁新增一個classname-->
             <a class="accesskey" href="#aC" id="aC" accesskey="C" title="主要內容區">:::</a>
             <div class="container">
-                <!-- breadcrumb路徑 -->
-                <div class="breadcrumb">
-                    <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">節點</a></li>
-                        <li>節點</li>
-                    </ul>
+                <!-- 左側 -->
+                <div class="left_block">
+                    <div class="leftblock_banner">
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                        <div class="item">Banner</div>
+                    </div>
                 </div>
-                <!-- h2節點 -->
-                <h2 class="title">意見信箱</h2>
-                <!-- function功能區塊 -->
-                <div class="function">
-                    <ul>
-                        <li class="icon_back"><a href="#">回上一頁</a></li>
-                        <li class="icon_print"><a href="#">友善列印</a></li>
-                        <li class="icon_forward"><a href="#">轉寄友人</a></li>
-                     </ul>
-                </div>
-                <!-- QP Start -->
-                <section class="qp">
-                    <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
-                    <form action="" class="form_grid flex-form">
-                        <div class="form_grp">
-                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
-                            <div class="form_content">
-                                <input type="text" id="" value="">
-                            </div>
-                        </div>
-                        <div class="form_grp">
-                            <label for="password" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>聯絡電話：</label>
-                            <div class="form_content">
-                                <input name="" id="" type="text">
-                            </div>
-                        </div>
-                        <div class="form_grp">
-                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的電子信箱：</label>
-                            <div class="form_content">
-                                <input name="" id="" type="text">
-                            </div>
-                        </div>
-                        <div class="form_grp">
-                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
-                            <div class="form_content">
-                                <div class="radio_grp form_inline">
-                                    <label>
-                                        <input type="radio" name="sampleRadio5" value="" checked="">類別1</label>
-                                    <label>
-                                        <input type="radio" name="sampleRadio5" value="">類別2</label>
-                                    <label>
-                                        <input type="radio" name="sampleRadio5" value="">類別3</label>
+                <!-- 主要內容區 -->
+                <div class="center_block">
+                    <!-- breadcrumb路徑 -->
+                    <div class="breadcrumb">
+                        <ul>
+                            <li><a href="#">首頁</a></li>
+                            <li><a href="#">節點</a></li>
+                            <li>節點</li>
+                        </ul>
+                    </div>
+                    <!-- h2節點 -->
+                    <h2 class="title">意見信箱</h2>
+                    <!-- function功能區塊 -->
+                    <div class="function">
+                        <ul>
+                            <li class="icon_back"><a href="#">回上一頁</a></li>
+                            <li class="icon_print"><a href="#">友善列印</a></li>
+                            <li class="icon_forward"><a href="#">轉寄友人</a></li>
+                        </ul>
+                    </div>
+                    <!-- QP Start -->
+                    <section class="qp">
+                        <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
+                        <form action="" class="form_grid flex-form">
+                            <div class="form_grp">
+                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
+                                <div class="form_content">
+                                    <input type="text" id="" value="">
                                 </div>
                             </div>
-                        </div>
-                        <div class="form_grp">
-                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
-                            <div class="form_content">
-                                <div class="check_grp form_inline">
-                                    <label>
-                                        <input type="checkbox" name="" value="" checked="">類別1</label>
-                                    <label>
-                                        <input type="checkbox" name="" value="">類別2</label>
-                                    <label>
-                                        <input type="checkbox" name="" value="">類別3</label>
+                            <div class="form_grp">
+                                <label for="password" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>聯絡電話：</label>
+                                <div class="form_content">
+                                    <input name="" id="" type="text">
                                 </div>
                             </div>
-                        </div>
-                        <div class="form_grp">
-                            <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>內容：</label>
-                            <div class="form_content">
-                                <textarea name="" id="" cols="30" rows="70"></textarea>
+                            <div class="form_grp">
+                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的電子信箱：</label>
+                                <div class="form_content">
+                                    <input name="" id="" type="text">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form_grp">
-                            <label for="selectSample" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
-                            <div class="form_content form_inline">
-                                <select id="selectSample" name="">
-                                    <option value="">類別1</option>
-                                    <option value="">類別2</option>
-                                    <option value="">類別3</option>
-                                </select>
+                            <div class="form_grp">
+                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                                <div class="form_content">
+                                    <div class="radio_grp form_inline">
+                                        <label>
+                                            <input type="radio" name="sampleRadio5" value="" checked="">類別1</label>
+                                        <label>
+                                            <input type="radio" name="sampleRadio5" value="">類別2</label>
+                                        <label>
+                                            <input type="radio" name="sampleRadio5" value="">類別3</label>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form_grp">
-                            <label class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>驗證碼：</label>
-                            <div class="form_content">
-                                <img src="images/basic/captcha.gif" alt="" class="captcha">
-                                <input type="text" id="" value="">
+                            <div class="form_grp">
+                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                                <div class="form_content">
+                                    <div class="check_grp form_inline">
+                                        <label>
+                                            <input type="checkbox" name="" value="" checked="">類別1</label>
+                                        <label>
+                                            <input type="checkbox" name="" value="">類別2</label>
+                                        <label>
+                                            <input type="checkbox" name="" value="">類別3</label>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="btn_grp">
-                            <input name="" type="reset" value="清除">
-                            <input name="Search" type="submit" value="送出">
-                        </div>
-                    </form>
-                </section>
-                <!-- QP End -->
+                            <div class="form_grp">
+                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>內容：</label>
+                                <div class="form_content">
+                                    <textarea name="" id="" cols="30" rows="70"></textarea>
+                                </div>
+                            </div>
+                            <div class="form_grp">
+                                <label for="selectSample" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                                <div class="form_content form_inline">
+                                    <select id="selectSample" name="">
+                                        <option value="">類別1</option>
+                                        <option value="">類別2</option>
+                                        <option value="">類別3</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form_grp">
+                                <label class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>驗證碼：</label>
+                                <div class="form_content">
+                                    <img src="images/basic/captcha.gif" alt="" class="captcha">
+                                    <input type="text" id="" value="">
+                                </div>
+                            </div>
+                            <div class="btn_grp">
+                                <input name="" type="reset" value="清除">
+                                <input name="Search" type="submit" value="送出">
+                            </div>
+                        </form>
+                    </section>
+                    <!-- QP End -->
+                </div>
             </div>
         </div>
         <!-- fatfooter Start -->
